<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.expedia.bookings.widget.TextView
                android:id="@+id/error_message_infants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/flights_error_message_infants"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                android:text="@string/max_one_infant_per_lap"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/traveler_table_margin"
                    android:orientation="horizontal"
                    android:textSize="15sp">

                    <!-- Empty text view for fixing a11y issue where first item of the dialog is being called on selecting a spinner item -->
                    <TextView
                        android:layout_width="1px"
                        android:layout_height="1px"
                        android:text=" "
                        tools:ignore="HardcodedText"/>

                    <ImageButton
                        android:id="@+id/adults_minus"
                        style="@style/TravelerIcon.Minus"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/remove_adult_traveler_cont_desc"/>

                    <com.expedia.bookings.widget.TextView
                        android:id="@+id/adult"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/traveler_plus_minus_size"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:textColor="@color/traveler_picker_main_text"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/adults_plus"
                        style="@style/TravelerIcon.Plus"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/add_adult_traveler_cont_desc"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textSize="15sp">

                    <ImageButton
                        android:id="@+id/children_minus"
                        style="@style/TravelerIcon.Minus"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/remove_child_traveler_cont_desc"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/traveler_plus_minus_size"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/children"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/traveler_picker_main_text"
                            android:textSize="16sp" />

                        <com.expedia.bookings.widget.TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/children_age_label"
                            android:contentDescription="@string/children_age_label_cont_desc"
                            android:textColor="@color/traveler_picker_secondary_text"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/children_plus"
                        style="@style/TravelerIcon.Plus"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/add_child_traveler_cont_desc"/>
                </LinearLayout>

                <com.expedia.bookings.widget.TextView
                    android:id="@+id/child_age_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/child_age_label"
                    android:textColor="@color/traveler_picker_main_text"
                    android:textSize="16sp"
                    app:textStyle="medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textSize="15sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/child_spinner_1"
                            style="@style/SelectTravelerAgeSpinner" />

                        <Spinner
                            android:id="@+id/child_spinner_2"
                            style="@style/SelectTravelerAgeSpinner" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/children_ages_bottom_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <Spinner
                            android:id="@+id/child_spinner_3"
                            style="@style/SelectTravelerAgeSpinner" />


                        <Spinner
                            android:id="@+id/child_spinner_4"
                            style="@style/SelectTravelerAgeSpinner" />

                    </LinearLayout>
                </LinearLayout>

                <Spinner
                    android:id="@+id/infant_preference_seating"
                    style="@style/InfantSeatingPreferenceSpinner"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>
