<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/room_type_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_type"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/room_type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <com.mobiata.android.widget.TiltedImageView
            android:id="@+id/display_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:src="@drawable/btn_collapse_expand" />
    </LinearLayout>

    <TextView
        android:id="@+id/room_details_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone" />

</LinearLayout>