...
                    android:background="@drawable/ab_spinner"
                    android:contentDescription="@string/cd_flights_search_number_of_travelers_edit"
                    android:padding="0dp"
                    android:src="@drawable/ic_traveler_picker"/>

                <TextView
                    android:id="@+id/num_travelers_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/num_travelers_button"
                    android:layout_alignLeft="@id/num_travelers_button"
                    android:layout_alignRight="@id/num_travelers_button"
                    android:layout_alignTop="@id/num_travelers_button"
...
